--- a/chp2.html
+++ b/chp2.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="icone2.png" type="image/x-icon"/>
 </head>
 <body>
-    <!--<center><img src="photo2.jpeg" width="700" height="400" middle alt="Me working" > <br></center>-->
+  <header>
     <div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#about">About</a>
@@ -16,9 +16,11 @@
         <a href="#resume">Resume</a>
         <a href="#contact">Contact</a>
       </div>
+    </header>
       <hr size="6" width="100%" align="left" color="pink">
-      <form>
-          <a name ="home" ></a>
+      <main>
+      <div id="home">
+          
           <h1>Home</h1>
           <p>
               Welcome to my Personal blog. The switch from living at home to university was exceptionally daunting, therefore the hardest part was reaching out. My university was quick in giving me an initial appointment where they facilitated open conversations where I felt safe to vocalise my initial anxieties. The appointments they provided were as frequent/infrequent as I wanted them to be. This really helped me not bottle things up which I began to.
@@ -33,9 +35,8 @@
           height="315"
           src="https://www.youtube.com/embed/zcTFG_F0FRs">   
       </iframe></center> <br>
-      </form>
-    <form>
-      <a name ="work"></a>
+      </div>
+    <div id="work">
       <h1>Work</h1>
       <center><table border="1">
         <tr>
@@ -54,9 +55,8 @@
           <td>GoMyCode</td>
         </tr>
       </table></center> <br>
-    </form>
-    <form>
-        <a name ="resume"></a>
+    </div>
+    <div id="resume">
         <h1> Resume </h1>
         <p>
             The stresses of university, exams and all the deadlines put pressure on everyone's mental health so rest assured that you're not alone there. You're equally not alone in wanting to seek support if that's what you feel is best for you. 
@@ -65,17 +65,15 @@ Speak out and get the support you need! It's much better to talk about the situa
 
 And if you're not struggling with your mental health, then be there for your friends and loved ones. Let them lean on you for support and make sure they know that you're there for them.
         </p>
-    </form>
-    <form>
-        <a name ="about"></a>
+      </div>
+    <div id="about">
         <h1> About </h1>
         <p><b>My Facebook Profil :</b></p> 
-        <a href="https://www.facebook.com/imen.bouzaya" > Imen Bouzaya  </a>
+        <a href="https://www.facebook.com/imen.bouzaya" > Imen Bouzaya Facebook Profil </a>
         <p><b>My Instatagram Profil :</b></p> 
-        <a href="https://www.instagram.com/imen_bzy/?hl=fr" > Imen Bouzaya </a>
-    </form>
-    <form>
-        <a name ="contact"></a>
+        <a href="https://www.instagram.com/imen_bzy/?hl=fr" > Imen Bouzaya Instatagram Profil </a>
+    </div>
+    <div id="contact">
         <h1> Contact </h1>
         <p>
             <b>You can send me a message :) </b>
@@ -95,7 +93,8 @@ And if you're not struggling with your mental health, then be there for your fri
                     Let's talk :)
                 </textarea> <br>
                 <input type="submit" value="Submit"  />
-    </form>
+    </div>
+  </main>
     <br>
     <br>
     <hr size="6" width="100%" align="left" color="pink">
